Emphasizing of excessive imperativeness in some places of code.

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Haskell reimplementation (sometimes modified and sometimes overly complicated) of examples from Lazy Foo' SDL tutorials (http://lazyfoo.net/SDL_tutorials/index.php).
+Haskell reimplementation (sometimes modified and sometimes overly complicated and overly imperative) of examples from Lazy Foo' SDL tutorials (http://lazyfoo.net/SDL_tutorials/index.php).
